# genie-simulation

./: .env.example  .gitignore  Makefile  README.md  albertsons-conversations.yaml  conversations.yaml  locustfile.py  locustfile_cached.py  locustfile_in_memory_semantic.py  pyproject.toml  requirements.txt
genie_simulation/: __init__.py  config.py  detailed_metrics.py  enrich_metrics.py  export_conversations.py  export_to_uc.py  loadtest.py  loadtest_cached.py  loadtest_in_memory_semantic.py  logging_config.py  notebook_runner.py  query_history.py
notebooks/: analyze_results.py  compare_runs.py  export_conversations.py  genie_locustfile.py  genie_locustfile_cached.py  load_test.py  load_test_cached.py  load_test_in_memory_semantic.py
