[project]
name = "genie-simulation"
version = "0.1.0"
description = "Tools for exporting Genie conversations and load testing Genie chatbot interactions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-ai-bridge>=0.6.0",
    "databricks-sdk>=0.81.0",
    "locust>=2.29.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
]

[project.scripts]
export-conversations = "genie_simulation.export_conversations:main"
genie-loadtest = "genie_simulation.loadtest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
